2005-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Documented get_notifs() better, thanks Szucs Gabor
 src/connection_base.cxx:
  - Better workaround for problem with libpq's connection failure detection
2005-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Marked inhibit_reactivation() as tested
  - Restored full test coverage
 test/test086.cxx:
  - New
  - Tests inhibition of connection reactivation
2005-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualC++.NET-2003/config-public-compiler.h:
  - Removed PQXX_HAVE_CPP_WARNING, thanks Christian Nettesheim
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Removed s_dummy to fix Visual C++ incompatibility (Christian Nettesheim)
 src/connection_base.cxx:
  - Workaround for a Visual C++ warning (Christian Nettesheim)
 tools/makevcmake.pl, tools/maketestvcmak.pl:
  - More patches by Christian:
  - Disable incremental builds on tests
  - Don't delete debug info
  - Remove unneeded Windows libraries
  - Added wsock32.lib for test programs
2005-07-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Missing parenthesis, thanks hys545@dreamwiz.com
2005-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/cursor.hxx,
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx,
 include/pqxx/transaction_base.hxx, include/pqxx/transactor.hxx:
  - Grouped documentation into semantic sections
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Factored result::CheckStatus()-related code into new check_result()
  - Try to deal with libpq "CONNECTION_OK after connection error" problem
  - Grouped member documentation into semantic sections
  - Implemented inhibition of connection reactivation
 include/pqxx/libcompiler.h:
  - Don't define NOMINMAX if it exists, thanks christian@cnetconsulting.de
 include/pqxx/util.hxx, src/largeobject.cxx, src/util.cxx: