@@ -1,3 +1,9 @@
+2005-07-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/connection_base.cxx:
+  - Rewrote libpq CONNECTION_OK workaround
+2005-07-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx:
+  - Documentation: await_notification() also processes, thanks Szucs Gabor
 2005-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx:
   - Documented get_notifs() better, thanks Szucs Gabor
